base/app/ nginxingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
